@startuml

class ConfirmRequestController {
    + performFlexibleCheckOut(UpdateCheckInHistory, HttpSession) : ResponseEntity<Integer>
}

class UpdateCheckInHistory {
    - cancel : String
    - creditAfterPay : double
    - totalCredit : double
    - orderDetailId : int
    - checkInHistoryId : int
    - checkOutTime : Timestamp
    + getNotification() : Notification
}

class User {
    - userId : int
    // ... other properties
}

class Notification {
    - userIdSend : int
    - userIdReceive : int
    - messageType : String
    - message : String
    - timeSend : Timestamp
    - departmentId : int
    - orderDetailId : int
    // ... other properties or methods
}

class NotificationService {
    + insertNotification(Notification) : void
}

class OrderDetailService {
    + getUserNameByOrderDetailId(int) : String
    + updateOrderDetailsUseStatus(int, String) : void
}

class WalletService {
    + updateBalanceByUderId(int, double) : void
    + getBalanceByUserId(int) : double
}

class BrandService {
    + getBrandOwnerIdByDepartmentId(int) : int
}

class TransactionService {
    + insertTransferCreditHistory(TransferCreditHistory) : void
}

class CheckInHistoryService {
    + updateCheckOutTimeAndCredit(int, Timestamp, double) : void
}

class WebSocketService {
    + notifyEmployee(int, Notification) : void
}

class ResponseEntity<T> {
}

class HttpSession {
}

class TransferCreditHistory {
    - senderUserId : int
    - receiverUserId : int
    - amount : double
    - orderDetailId : int
    - transferDate : Timestamp
    // ... other properties or methods
}

ConfirmRequestController --> "uses" ResponseEntity : returns
ConfirmRequestController --> "uses" NotificationService : calls
ConfirmRequestController --> "uses" OrderDetailService : calls
ConfirmRequestController --> "uses" WalletService : calls
ConfirmRequestController --> "uses" BrandService : calls
ConfirmRequestController --> "uses" TransactionService : calls
ConfirmRequestController --> "uses" CheckInHistoryService : calls
ConfirmRequestController --> "uses" WebSocketService : calls
ConfirmRequestController --> "uses" HttpSession : reads userInfo

NotificationService --> "creates" Notification
TransactionService --> "creates" TransferCreditHistory

@enduml